[project]
name = "py-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "loguru",
    "psutil>=5.9.0",
]

# Ruff 配置
[tool.ruff]
# 目标 Python 版本
target-version = "py312"

# 包含的文件路径
include = ["common_utils/**/*.py", "*.py"]

# 排除的文件路径
exclude = [
    ".git",
    ".venv", 
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
]

# 每行最大字符数
line-length = 88

# 启用的检查规则
lint.select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
]

# 忽略的检查规则
lint.ignore = [
    "E501",   # 行太长（由 line-length 处理）
    "B008",   # 不要在函数调用中使用 `Argument.default`
    "UP007",  # 使用 X | Y 进行类型联合（Python 3.10+才支持）
]

# 允许修复的规则
lint.fixable = ["ALL"]

# 不允许修复的规则
lint.unfixable = []

# 每个文件允许的未使用变量数
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# isort 配置
[tool.ruff.lint.isort]
known-first-party = ["common_utils"]
split-on-trailing-comma = true

# flake8-quotes 配置
[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

# 格式化配置
[tool.ruff.format]
# 使用双引号
quote-style = "double"

# 缩进类型
indent-style = "space"

# 保留魔术拖尾逗号
skip-magic-trailing-comma = false

# 行尾类型
line-ending = "auto"
